[package]
name = "keikibook"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "keikibook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[programs.localnet]
keikibook = "target/idl/keikibook.json"

[dependencies]
anchor-lang = "0.31.0"
solana-program = "2.2.1"
thiserror = "2.0.12"
spl-token = {version = "3.5.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "1.5.7"
borsh-derive = "1.5.7"
